uploads and code adjustments

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,9 +45,10 @@ body
 
 #collaterals img
 {
-    width: 250px;
+    width: 600px;
+    height: 700px;
 
-    margin: 3rem;
+    margin-bottom: 2rem;
 }
 
 #graphicdesigns div img
@@ -78,6 +79,14 @@ body
 {
     width: 600px;
     height: 800px;
+
+    margin-bottom: 2rem;
+}
+
+#photography #others img
+{
+    width: 600px;
+    height: 400px;
 
     margin-bottom: 2rem;
 }
